--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "apminsight": "^5.3.0",
     "better-auth": "^1.4.18",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
